--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,155 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("./pokeBg.jpg");
+}
+.centered-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  margin-top: 100px; /* Set the desired height */
 }
 
+.input-box{
+  /* styles.css */
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  height: 30vh; /* Make the container the full height of the viewport */
+}
+
+.input-box input,button{
+  border-radius: 20px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.pokeLogo{
+  max-width: 100px;
+  max-height: 100px;
+}
+
+.wrapper{
+  width: 100%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  /* justify-content: center;
+  align-items: center; */
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,23% 23% 23% 23%);
+  grid-gap: 2%;
+
+}
+
+.card {
+  padding: 10% 10%;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;  
+  margin-left: 10%;
+}
+.card img {
+  display: flex;
+  width: 50%;
+  max-height: 200px;
+  position: relative;
+  margin: auto;
+}
+.hp {
+  width: 35%;
+  background-color: #ffffff;
+  text-align: center;
+  padding: 8px 0;
+  border-radius: 30px;
+  margin-left: auto;
+  font-weight: 400;
+}
+.poke-name {
+  font-size: 150%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  text-align: center;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+.types {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0 40px 0;
+}
+.hp span,
+.types span {
+  font-size: 12px;
+  letter-spacing: 0.4px;
+  font-weight: 600;
+}
+.types span {
+  padding: 5px 20px;
+  border-radius: 20px;
+  color: #ffffff;
+}
+.stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+}
+.stats p {
+  color: #404060;
+}
+/* Container for stats */
+.stats {
+  display: flex;
+  justify-content: space-between; /* Adjust as needed */
+  align-items: center; /* Vertically center items */
+}
+
+/* Style for individual stat items */
+.stat-item {
+ 
+  text-align: center;
+  /* Flex property to evenly distribute items */
+  max-width:30%; /* Limit width for responsiveness */
+}
+
+/* Style for the h3 element within stat items */
+.stat-item h3 {
+  font-size: 24px;
+  color: #333;
+}
+
+/* Style for the p element within stat items */
+.stat-item p {
+  font-size: 70%;
+  color: #666;
+  font-weight: 500;
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
+  margin-bottom: 50px;
+}
+
+.page-btn {
+  padding: 10px 15px;
+  margin: 0 5px;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  color: #333;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s, transform 0.3s;
+}
+
+.page-btn:hover {
+  background-color: #333;
+  color: #fff;
+  transform: scale(1.1);
+}
+
+.prev, .next {
+  font-weight: bold;
 }
